# state-graph

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: mnist_example.py
state_graph/: __init__.py
state_graph/advanced/: __init__.py  automl.py  cloud.py  distributed.py  embeddings.py  federated.py  inference_opt.py  video_training.py
state_graph/core/: data.py  deploy.py  engine.py  evaluator.py  graph.py  libraries.py  metrics.py  registry.py  scheduler.py
state_graph/dataeng/: __init__.py  connectors.py  pipeline.py
state_graph/datasets/: __init__.py  converters.py  creator.py  sources.py
state_graph/hf/: __init__.py  datasets.py  hub.py  unsloth.py
state_graph/layers/: custom.py  llm.py
state_graph/rl/: __init__.py  engine.py
state_graph/robotics/: __init__.py  hardware.py  physics_server.py  ros_bridge.py  simulator.py
state_graph/server/: app.py  collaboration.py
state_graph/ui/: index.html
state_graph/workspace/: __init__.py  ai_assistant.py  executor.py  manager.py  paper_to_model.py  paper_writer.py
tests/: test_core.py  test_dataeng.py  test_datasets.py  test_graph_extended.py  test_graph_functional.py  test_hf_features.py  test_hf_functional.py  test_llm.py  test_llm_functional.py  test_metrics.py  test_novel_architectures.py  test_rl_functional.py  test_robotics.py  test_robotics_functional.py  test_server.py  test_topbar_functional.py  test_workspace.py
