[project]
name = "state-graph"
version = "1.0.0"
description = "Complete ML research platform — design, train, evaluate, and deploy AI models from your browser"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=11.0",
    "numpy>=1.24",
    "psutil>=5.9",
    "python-multipart>=0.0.6",
    "transformers>=4.35",
    "huggingface-hub>=0.19",
    "tokenizers>=0.15",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.35",
    "huggingface-hub>=0.19",
    "tokenizers>=0.15",
    "peft>=0.7",
    "accelerate>=0.25",
    "datasets>=2.16",
    "evaluate>=0.4",
    "timm>=0.9",
    "diffusers>=0.25",
    "trl>=0.7",
]
unsloth = [
    "unsloth[colab-new]",
    "trl>=0.7",
    "datasets>=2.16",
    "xformers",
]
vision = [
    "torchvision>=0.15",
    "Pillow>=9.0",
]
audio = [
    "torchaudio>=2.0",
    "librosa>=0.10",
]
rl = [
    "gymnasium[classic-control,box2d]>=0.29",
    "stable-baselines3>=2.2",
    "shimmy>=1.3",
]
rl-robotics = [
    "gymnasium[mujoco]>=0.29",
    "pybullet>=3.2",
    "stable-baselines3>=2.2",
    "mujoco>=3.0",
]
hardware = [
    "pyserial>=3.5",
]
ros2 = [
    # rclpy comes from ROS2 install, not pip
    # Source your ROS2 workspace: source /opt/ros/${ROS_DISTRO}/setup.bash
    "pyserial>=3.5",
]
all = [
    "state-graph[hf,unsloth,vision,audio,rl,hardware]",
]

[project.scripts]
state-graph = "state_graph.server.app:main"

[tool.setuptools.packages.find]
include = ["state_graph*", "sg_datasets*", "sg_workspace*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
