[project]
name = "state-graph"
version = "1.0.0"
description = "Complete ML research platform — design, train, evaluate, and deploy AI models from your browser"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=11.0",
    "numpy>=1.24",
    "psutil>=5.9",
    "python-multipart>=0.0.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "transformers>=4.35",
    "huggingface-hub>=0.19",
    "tokenizers>=0.15",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.35",
    "huggingface-hub>=0.19",
    "tokenizers>=0.15",
    "peft>=0.7",
    "accelerate>=0.25",
    "datasets>=2.16",
    "evaluate>=0.4",
    "timm>=0.9",
    "diffusers>=0.25",
    "trl>=0.7",
    "kaggle>=1.5",
]
unsloth = [
    "unsloth[colab-new]",
    "trl>=0.7",
    "datasets>=2.16",
    "xformers",
]
vision = [
    "torchvision>=0.15",
    "Pillow>=9.0",
]
audio = [
    "torchaudio>=2.0",
    "librosa>=0.10",
]
rl = [
    "gymnasium[classic-control,box2d]>=0.29",
    "stable-baselines3>=2.2",
    "shimmy>=1.3",
]
rl-robotics = [
    "gymnasium[mujoco]>=0.29",
    "pybullet>=3.2",
    "stable-baselines3>=2.2",
    "mujoco>=3.0",
]
dataeng = [
    "pymysql>=1.1",
    "psycopg2-binary>=2.9",
    "pymssql>=2.2",
    "oracledb>=1.4",
    "pymongo>=4.6",
    "redis>=5.0",
    "elasticsearch>=8.11",
    "kafka-python>=2.0",
    "boto3>=1.34",
    "clickhouse-connect>=0.7",
    "pyarrow>=14.0",
]
cloud = [
    "sagemaker>=2.200",
    "google-cloud-aiplatform>=1.38",
    "modal>=0.56",
    "runpod>=1.6",
]
inference = [
    "onnxruntime>=1.16",
    "gradio>=4.0",
]
embeddings = [
    "sentence-transformers>=2.2",
    "setfit>=1.0",
]
distributed = [
    "deepspeed>=0.12",
]
federated = [
    "flwr>=1.7",
]
hardware = [
    "pyserial>=3.5",
]
ros2 = [
    # rclpy comes from ROS2 install, not pip
    # Source your ROS2 workspace: source /opt/ros/${ROS_DISTRO}/setup.bash
    "pyserial>=3.5",
]
all = [
    "state-graph[hf,unsloth,vision,audio,rl,rl-robotics,dataeng,cloud,inference,embeddings,distributed,federated,hardware]",
]

[project.scripts]
state-graph = "state_graph.server.app:main"

[tool.setuptools.packages.find]
include = ["state_graph*", "sg_datasets*", "sg_workspace*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
